# fastapi-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  catalog-info.yaml.bak  docker-compose.yml  majorVersion  mkdocs.yaml  pyproject.toml
{{cookiecutter.repo_name}}/docs/: index.md
{{cookiecutter.repo_name}}/docs/api/: component-api.yaml  component.yaml
{{cookiecutter.repo_name}}/tests/: conftest.py  test_config.py  test_{{cookiecutter.project_name}}.py
{{cookiecutter.repo_name}}/tests/adapters/db/: test_adapter.py
{{cookiecutter.repo_name}}/tests/endpoints/: test_dummy.py  test_healthchecks.py
{{cookiecutter.repo_name}}/tests/fixtures/: base.py  db.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/: __main__.py  config.py  containers.py  exceptions.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/adapters/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/adapters/db/: __init__.py  adapter.py  interfaces.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/controllers/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/controllers/db/: __init__.py  controller.py  interfaces.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/endpoints/: dummy.py
